@@ -759,6 +759,8 @@ Tests
 Tools/Demos
 -----------
 
+- Issue #18974: Tools/scripts/diff.py now uses argparse instead of optparse.
+
 - Issue #21906: Make Tools/scripts/md5sum.py work in Python 3.
   Patch by Zachary Ware.
 
